# c99

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  c99cc_stdio_tmp_fscanf.txt
include/: assert.h  ctype.h  errno.h  math.h  signal.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h
runtime/: ctype.c  errno.c  math.c  printf.c  scanf.c  signal.c  stdio_file.c  stdlib.c  string.c  time.c
src/: codegen.cpp  codegen.h  diag.cpp  diag.h  lexer.cpp  lexer.h  parser.cpp  parser.h  preprocessor.cpp  preprocessor.h  sema.cpp  sema.h
tests/: run.sh
tests/err/: array_init.c  array_init_excess.c  array_param_bad_unsized.c  array_size_zero.c  array_subscript_nonptr.c  array_void.c  assign_non_identifier.c  assign_undeclared.c  bitfield_addr.c  bitfield_invalid_type.c  bitwise_float.c  block_redefinition.c  block_scope_leak.c  break_outside_loop.c  call_arg_trailing_comma.c  call_arity_too_few.c  call_arity_too_many.c  call_undeclared.c  comma_missing_rhs.c  const_assign.c  const_ptr_reassign.c  const_ptr_write.c  continue_outside_loop.c  decl_init_self_ref.c  decl_multi_redef.c  designated_array_oob.c  designated_struct_field.c  do_while_missing_rparen.c  do_while_missing_semicolon.c  extern_conflict.c  for_decl_scope_leak.c  global_init_self_ref.c  global_redef.c  incdec_rvalue.c  incdec_voidptr.c  missing_rbrace.c  missing_rparen.c  missing_semicolon.c  multi_c_out.c  pointer_cmp_int.c  (+38 more)
tests/include/: pp_path.h
tests/ok/: array_basic.c  array_decay_param.c  array_init_basic.c  array_init_partial.c  array_init_unsized.c  array_multidim.c  cmp_eq.c  (+234 more)
(+2 files in other folders)
